Get rid of TableLayout & migrate to spongepowered Mixins again