@@ -16,8 +16,12 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 repositories {
     mavenCentral()
     maven {
-        name = 'Geolykt'
-        url = 'https://geolykt.de/maven/'
+        name = "MixinRepo"
+        url = "https://repo.spongepowered.org/repository/maven-public/"
+    }
+    maven {
+        name = "SLL-Build-Dependencies"
+        url = "deps/"
     }
 }
 
@@ -33,13 +37,19 @@ java {
     modularity.inferModulePath.set(true)
 }
 
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+            "--add-exports", "org.spongepowered.mixin/org.spongepowered.asm.mixin.transformer=de.geolykt.starloader.launcher"
+        ]
+    }
+}
+
 dependencies {
 
     // I am very well aware that this is just a reference implementation, but it has served me well in the past; so I prefer it over any other implementation
     // https://mvnrepository.com/artifact/org.json/json
     api 'org.json:json:20220320'
-
-    implementation group: 'de.geolykt.starloader', name: 'tableLayout', version: '4.4.0'
 
     // https://mvnrepository.com/artifact/org.jetbrains/annotations
     api group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
@@ -56,8 +66,7 @@ dependencies {
     api "org.ow2.asm:asm-analysis:9.3"
     api "org.ow2.asm:asm-util:9.3"
     api "org.ow2.asm:asm-commons:9.3"
-    api "de.geolykt.starloader:mixin:0.8.4"
-    api "de.geolykt.starloader:access-widener:2.1.0"
+    api "org.spongepowered:mixin:0.8.5"
 
     // Logging
     // SLF4J is the base logger for most libraries, therefore we should provide integration to it
@@ -70,6 +79,10 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha16'
     implementation 'ch.qos.logback:logback-core:1.3.0-alpha16'
     // api 'org.slf4j:slf4j-simple:2.0.0-alpha5'
+
+    // Jars we need to include to trick JPMS
+    compileOnly 'empty:log4j:999.0.0'
+    compileOnly 'empty:modlauncher:999.0.0'
 }
 
 jar {
@@ -123,3 +136,11 @@ project.sourceSets.each { set -> {
     }
 }}
 
+// Based on https://stackoverflow.com/a/71749829
+eclipse.classpath.file {
+    whenMerged {
+        entries.find{ it.path ==~ '.*JRE_CONTAINER.*' }.each {
+            it.entryAttributes['add-exports'] = 'org.spongepowered.mixin/org.spongepowered.asm.mixin.transformer=de.geolykt.starloader.launcher'
+        }
+    }
+}
